unpackaged/main/default/objects/AcctSeed__Period_Task__c/fields/AcctSeed__Accounting_Period_Offset__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Accounting_Period_Offset__c</fullName>
    <defaultValue>"0"</defaultValue>
    <inlineHelpText>The accounting period offset is when the task is being performed compared to when the accounting period ends. So a June task for a May accounting period would have an offset of -1.</inlineHelpText>
    <label>Accounting Period Offset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-12</fullName>
            </value>
            <value>
                <fullName>-11</fullName>
            </value>
            <value>
                <fullName>-10</fullName>
            </value>
            <value>
                <fullName>-9</fullName>
            </value>
            <value>
                <fullName>-8</fullName>
            </value>
            <value>
                <fullName>-7</fullName>
            </value>
            <value>
                <fullName>-6</fullName>
            </value>
            <value>
                <fullName>-5</fullName>
            </value>
            <value>
                <fullName>-4</fullName>
            </value>
            <value>
                <fullName>-3</fullName>
            </value>
            <value>
                <fullName>-2</fullName>
            </value>
            <value>
                <fullName>-1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>