unpackaged/main/default/objects/AcctSeed__Period_Task__c/fields/AcctSeed__Active__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Active__c</fullName>
    <formula>IF(ISPICKVAL(AcctSeed__Ends_On__c, 'Never'), true,
					IF(AND(ISPICKVAL(AcctSeed__Ends_On__c, 'End Date'),  AcctSeed__Next_Accounting_Period_Task_Date__c &gt;=  AcctSeed__End_Date__c), false,
					    IF(AND(ISPICKVAL(AcctSeed__Ends_On__c, 'Number of Occurrences'),  AcctSeed__Occurrences__c &gt;= AcctSeed__Number_of_Occurrences__c), false
,true)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>