unpackaged/main/default/objects/AcctSeed__Period_Task__c/fields/AcctSeed__Create_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Create_Date__c</fullName>
    <inlineHelpText>When the task is created in reference to the due date.</inlineHelpText>
    <label>Create Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>