unpackaged/main/default/objects/AcctSeed__Period_Task__c/fields/AcctSeed__End_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__End_Date__c</fullName>
    <inlineHelpText>The date when this task will no longer be generated.  Setting a task to end on 12/31 will cause this task to only run this year.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>