unpackaged/main/default/objects/AcctSeed__Period_Task__c/fields/AcctSeed__Frequency_Num__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Frequency_Num__c</fullName>
    <inlineHelpText>Number used for the frequency. Repeat this task every 2 weeks starting today for example.</inlineHelpText>
    <label>Repeat Every</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>