unpackaged/main/default/objects/AcctSeed__Period_Task__c/fields/AcctSeed__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select ledger that task is associated with.</inlineHelpText>
    <label>Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipName>Period_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>