unpackaged/main/default/objects/AcctSeed__Period_Task__c/fields/AcctSeed__Never__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Never__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The task will continue to be scheduled.</inlineHelpText>
    <label>Never</label>
    <type>Checkbox</type>
</CustomField>