unpackaged/main/default/objects/AcctSeed__Period_Task__c/fields/AcctSeed__Priority__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Priority__c</fullName>
    <inlineHelpText>The priority of the task</inlineHelpText>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>