unpackaged/main/default/objects/AcctSeed__Period_Task__c/validationRules/AcctSeed__End_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__End_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISPICKVAL(AcctSeed__Ends_On__c, 'End Date'), ISNULL(AcctSeed__End_Date__c)), true, false)</errorConditionFormula>
    <errorMessage>Please select an end date.</errorMessage>
</ValidationRule>