unpackaged/main/default/objects/AcctSeed__Period_Task__c/validationRules/AcctSeed__Occurrences_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Occurrences_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISPICKVAL(AcctSeed__Ends_On__c, 'Number of Occurrences'), ISNULL(AcctSeed__Number_of_Occurrences__c)), true, false)</errorConditionFormula>
    <errorMessage>Please enter the number of occurrences.</errorMessage>
</ValidationRule>