unpackaged/main/default/objects/AcctSeed__Period_Task__c/listViews/AcctSeed__Not_Started.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Not_Started</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Sort_Order__c</columns>
    <columns>AcctSeed__Assignee__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Frequency_Num__c</columns>
    <columns>AcctSeed__Frequency_Type__c</columns>
    <columns>AcctSeed__Priority__c</columns>
    <columns>AcctSeed__Last_Accounting_Period_Task_Due_Date__c</columns>
    <columns>AcctSeed__Next_Accounting_Period_Task_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>Not Started</label>
</ListView>